--- a/CS/fGrid11/MainWindow.xaml
+++ b/CS/fGrid11/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="fGrid11.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:fGrid11" xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" Title="DXApplication" Height="700" Width="1100" SnapsToDevicePixels="True" UseLayoutRounding="True">
+﻿<Window x:Class="fGrid11.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:fGrid11" xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" Title="DXApplication" Height="700" Width="1100" SnapsToDevicePixels="True" UseLayoutRounding="True">
     <Grid>
         <dxg:GridControl Name="gridControl1" DataSource="{Binding ListPerson}">
             <dxg:GridControl.Columns>
